data fetching changes

--- a/src/components/dialogBox.css
+++ b/src/components/dialogBox.css
@@ -24,11 +24,14 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    border-bottom: 2px solid #0000001A;
 }
 
 .dialog-header h3 {
     margin: 0;
+}
+
+.dialog-body, .dialog-header{
+    border-bottom: 2px solid #0000001A;
 }
 
 .dialog-footer {
